# fakernaija

./: .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  MANIFEST.in  Makefile  README.md  example.py  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md  help_wanted.md
.github/workflows/: ci.yml  testpypi.yml
Faker9ja/: faker.py
Faker9ja/providers/: geo.py  names.py  phonenumbers.py  schools.py  states.py
Faker9ja/providers/data/: schools.json
docs/: requirements.txt
docs/source/: api.rst  changelog.rst  cli.rst  commands.rst  conf.py  contributing.rst  credits.rst  deployment.rst  documentation.rst  faker.rst  getting_started.rst  guide.rst  index.rst  installation.rst  internals.rst  license.rst  mixins.rst  naija.rst  providers.rst  support.rst  testing.rst
docs/source/api/: commands_api.rst  mixins_api.rst  providers_api.rst
docs/source/cli/: currency.rst  data.rst  phonenumber.rst  school.rst
docs/source/commands/: course.rst  degree.rst  email.rst  faculty.rst  license_plate.rst  marital_status.rst  name.rst  phonenumber.rst  religion.rst  state.rst
docs/source/faker/: course.rst  currency.rst  degree.rst  email.rst  faculty.rst  marital_status.rst  name.rst  phonenumber.rst  religion.rst  school.rst  state.rst
docs/source/mixins/: course.rst  currency.rst  degree.rst  email.rst  faculty.rst  name.rst  phonenumber.rst  school.rst  state.rst
docs/source/naija/: course.rst  degree.rst  email.rst  faculty.rst  license_plate.rst  marital_status.rst  name.rst  phonenumber.rst  religion.rst  school.rst  state.rst
docs/source/providers/: course.rst  currency.rst  degree.rst  email.rst  faculty.rst  name.rst  school.rst  (+2 more)
fakernaija/: __init__.py  cli.py  faker.py  naija.py  utils.py
fakernaija/commands/: __init__.py  course.py  course_cli.py  currency.py  currency_cli.py  data_cli.py  degree.py  degree_cli.py  email.py  email_cli.py  faculty.py  faculty_cli.py  license_plate.py  marital_status.py  name.py  name_cli.py  phonenumber.py  phonenumber_cli.py  religion.py  school.py  school_cli.py  state.py  state_cli.py
fakernaija/data/: courses.json  degrees.json  faculties.json  schools.json  states.json
fakernaija/mixins/: __init__.py  course.py  course_mixin.py  currency.py  currency_mixin.py  degree.py  degree_mixin.py  email.py  email_mixin.py  faculty.py  faculty_mixin.py  license_plate.py  marital_status.py  name.py  name_mixin.py  phonenumber.py  phonenumber_mixin.py  religion.py  school.py  school_mixin.py  state.py  state_mixin.py
fakernaija/providers/: __init__.py  course.py  course_provider.py  courses.py  currency.py  currency_provider.py  degree.py  degree_provider.py  education.py  email.py  email_provider.py  emails.py  faculty.py  faculty_provider.py  license_plate.py  marital_status.py  name.py  name_provider.py  names.py  phonenumber.py  phonenumber_provider.py  phonenumbers.py  religion.py  school.py  school_provider.py  schools.py  state.py  state_provider.py  states.py
fakernaija/tests/: __init__.py  test_degrees.py  test_education.py  test_emails.py  test_faker.py  test_names.py  test_phonenumbers.py  test_school_provider.py  test_schools.py  test_states.py  test_utils.py  test_utils_load_json.py
tests/: test_names.py  test_phonenumbers.py  test_schools.py  test_states.py
(+88 files in other folders)
